fix bug and add test code

--- a/main-v6.ipynb
+++ b/main-v6.ipynb
@@ -167,8 +167,9 @@
     "            for index, action in enumerate(self.action_queue):\n",
     "                action = self.action_queue[-1]\n",
     "                args = self.args_queue[index]\n",
-    "                action(args)\n",
-    "            \n",
+    "                action(*args)\n",
+    "            self.action_queue = []\n",
+    "            self.args_queue = []\n",
     "        else:\n",
     "            # TODO: Q learning to choose operation (function and args)\n",
     "            # func: rest,transmit,establish,tear,observe,communicate\n",
@@ -306,6 +307,17 @@
     "for i in range(50):\n",
     "    e.one_action_step()\n",
     "    print(e.report())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for a in e.agent_list:\n",
+    "    print(a)\n",
+    "    print(a.report())"
    ]
   },
   {
