add spectrum use visulization and more user

--- a/main-v6.ipynb
+++ b/main-v6.ipynb
@@ -179,7 +179,7 @@
     "            # find f: function, channel_index, target_agent_id = f(status)\n",
     "            \n",
     "            action_index = random.randint(1,6)\n",
-    "            channel_index = random.randint(0,9)\n",
+    "            channel_index = random.randint(0,self.env.channel_num-1)\n",
     "            self.action_dict[action_index](channel_index)\n",
     "            #print(self.action_dict[action_index], channel_index)\n",
     "            \n",
@@ -289,11 +289,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = Environment(10, 50)\n",
-    "e.join(Agent(e, 100))\n",
-    "e.join(Agent(e, 100))\n",
-    "e.join(Agent(e, 100))\n",
-    "e.join(Agent(e, 100))"
+    "e = Environment(100, 500)\n",
+    "e.join(Agent(e, 1000))\n",
+    "e.join(Agent(e, 1000))\n",
+    "e.join(Agent(e, 1000))\n",
+    "e.join(Agent(e, 1000))\n",
+    "e.join(Agent(e, 1000))\n",
+    "e.join(Agent(e, 1000))\n",
+    "e.join(Agent(e, 1000))\n",
+    "e.join(Agent(e, 1000))\n",
+    "e.join(Agent(e, 1000))\n",
+    "e.join(Agent(e, 1000))\n",
+    "e.join(Agent(e, 1000))\n",
+    "e.join(Agent(e, 1000))"
    ]
   },
   {
@@ -304,9 +312,23 @@
    },
    "outputs": [],
    "source": [
-    "for i in range(50):\n",
+    "for i in range(500):\n",
     "    e.one_action_step()\n",
     "    print(e.report())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "plt.matshow([[len(x) for x in y] for y in e.history])\n",
+    "plt.colorbar()"
    ]
   },
   {
